--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -250,3 +250,11 @@ a.login_link {
 	border: 1px solid #c88686;
 	color:red;
 }
+
+#kalkulator { float: left; width: 220px; padding: 10px; border: 1px solid; }
+#kalkulator input { width: 200px; border: 1px solid #000; text-align: center; }
+#kalkulator #dystans input{ width: 60px; }
+#kalkulator #czas input  { width: 40px; }
+#kalkulator span { clear: both; width: 240px; float: left; padding: 3px;}
+#kalkulator h2 { line-height: 90%; }
+#kalkulator #wynik { clear: both; width: 196px; font-variant: small-caps; padding: 2px; margin: 3px; border: 1px solid #000; font-size: 13px; }
