--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -98,9 +98,24 @@ input[type="checkbox"], input[type="radio"] {
 	padding:0;
 	outline:0;
 }
+input[type="text"]:disabled {
+	background-color: white;
+}
 textarea:focus {
 	outline-style:none;
 }
+textarea {
+	border-radius:3px;
+	border:1px solid #D2D2D2;
+	resize:none;
+	margin:0;
+	padding:5px;
+	font-family:Verdana;
+	font-size:14px;
+	outline:0;
+	outline-style:none;
+}
+
 #paper {
 	margin:0 auto;
 	padding:0 40px 0 40px;
