--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -157,6 +157,7 @@ textarea {
 	font-size:12px;
 }
 #logUser_info {
+
 	float:right;
 }
 .navi-r a {
@@ -332,6 +333,7 @@ a.login_link {
 }
 .showMsg_content {
 	width:500px;
+
 }
 
 #kalkulator { float: left; width: 220px; padding: 10px; border: 1px solid; }
@@ -348,3 +350,8 @@ a.login_link {
 
 #edycjaTrasy input, textarea { width: 240px; }
 #kontrolki input { width: 160px; }
+
+.kwadracik { float: left; width: 10px; height: 10px; border: 1px solid; margin-right: 20px; margin-top: 5px; }
+.rekord { margin: 4px; height: 20px; }
+.rekord a { text-decoration: none; }
+.rekord a:hover { font-style: italic; }
