--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -70,6 +70,16 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 	box-shadow:0 1px 2px rgba(64, 64, 64, 0.1);
 	outline:0;
 }
+select {
+	border:1px solid #D2D2D2;
+	border-radius:3px;
+	font-size:14px;
+	color:#444;
+	padding:7px 3px 7px 5px;
+	letter-spacing:1px;
+	margin:0;
+	outline:0;	
+}
 input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover {
 	background-color:#EBEBEB;
 	
@@ -82,7 +92,7 @@ input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focu
 	border:none;
 	padding:6px 9px 6px 9px;
 }
-input[type="text"], input[type="password"], input[type="email"], input[type="date"], input[type="number"] {
+input[type="text"], input[type="password"], input[type="email"], input[type="date"], input[type="number"], input[type="time"] {
 	border:1px solid #D2D2D2;
 	border-radius:3px;
 	font-size:14px;
@@ -91,6 +101,9 @@ input[type="text"], input[type="password"], input[type="email"], input[type="dat
 	letter-spacing:1px;
 	margin:0;
 	outline:0;
+}
+input[type="time"] {
+	width:80px;
 }
 input[type="checkbox"], input[type="radio"] {
 	cursor:pointer;
