--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -375,3 +375,6 @@ a.login_link {
 .rekord { margin: 4px; height: 20px; }
 .rekord a { text-decoration: none; }
 .rekord a:hover { font-style: italic; }
+
+.aktywnosc { width: 320px; height: 100px; border: 1px solid; margin: 10px; padding: 10px; }
+.aktywnosc a:link { text-decoration: none; }
