--- a/Aplikacja/style/default.css
+++ b/Aplikacja/style/default.css
@@ -378,3 +378,7 @@ a.login_link {
 
 .aktywnosc { width: 320px; height: 100px; border: 1px solid; margin: 10px; padding: 10px; }
 .aktywnosc a:link { text-decoration: none; }
+ 
+.aktywnoscSzczegoly { width: 320px; min-height: 100px; float: left; border: 1px dotted; margin: 10px; padding: 10px; }
+.aktywnoscSzczegoly a:link { text-decoration: none; }
+ 
